# gitlab-webhook

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yml  gitlab-webhook-flask.py  pyproject.toml  requirements.txt
